--- a/styles/app.theme.material.less
+++ b/styles/app.theme.material.less
@@ -5,3 +5,10 @@
 @import "./vendor/kendo/web/kendo.material.less";
 
 @import "app.template.less";
+
+// Search glyphicon
+.navbar {
+    .form-control-feedback {
+        color: @normal-text-color;
+    }
+}
